# ti

./: .gitignore  CHANGES.rst  README.rst  pyproject.toml  setup.py
scripts/: installEditableTICommand
test/: fin.t  format.t  note.t  status.t  tag.t
ti/: __init__.py
