[project]
name = "ti"
version = "0.1.3.dev1"
description = "A silly simple time tracker"
authors = [
    {name = "Shrikant Sharat"},
    {name = "Trevor Bekolay", email = "tbekolay@gmail.com"},
    {name = "Stephen Gaito", email = "stephen@perceptisys.co.uk"},
]
dependencies = [
    "pyyaml>=6.0",
    "colorama",
]
requires-python = ">=3.10"
license = {text = "MIT"}

[project.scripts]
ti = "ti:main"

[build-system]
requires = ["pdm-pep517>=1.0.0"]
build-backend = "pdm.pep517.api"

[tool]
[tool.pdm]
[tool.pdm.dev-dependencies]
dev = [
    
    # to run the tests
    "pytest>=7.2.1",
    "cram",
    "pytest-cram",

    # to build the docs
    "ghp-import",
    "pygreen"
]
